test/files/neg/t7296.check
t7296.scala:5: error: Implementation restriction: case classes cannot have more than 22 parameters.
  case class Foo(a: A, b: A, c: A, d: A, e: A, f: A, g: A, h: A, i: A, j: A, k: A, l: A, m: A, n: A, o: A, p: A, q: A, r: A, s: A, t: A, u: A, v: A, w: A, x: A, y: A, Z: A)
             ^
one error found
